bug 17996 - [device:msc] encoding format menulist is too short to hold the format label (r=aus).
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@15208 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/bindings/device/deviceMediaManagement.css
+++ b/app/skin/bindings/device/deviceMediaManagement.css
@@ -76,3 +76,7 @@ hbox > .notch-box {
   color: #d3d3d3 !important;
 }
 
+.encoding-format-list {
+  min-width: 4.5em;
+}
+
